--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                 <a href="https://www.instagram.com/_nguyen.manh.cuong_/" class="social-link instagram" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
+                <a href="cv.pdf" download class="btn-download-cv">Tải CV</a>
             </div>
         </div>
         
