--- a/index.html
+++ b/index.html
@@ -201,9 +201,13 @@
                 <a href="https://www.instagram.com/_nguyen.manh.cuong_/" class="social-link instagram" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="cv.pdf" download class="btn-download-cv">Tải CV</a>
             </div>
         </div>
+   <div class="cv-download-container">
+    <a href="cv.pdf" download class="custom-download-btn">
+        📄 Tải CV (PDF)
+    </a>
+</div>
         
         <div class="footer">
             <p>© 2025 - Trang web giới thiệu bản thân Nguyễn Mạnh Cường | <a href="#" style="color: #667eea; text-decoration: none;">Liên hệ với tôi</a></p>
